--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,10 @@
       src="C:\Users\Girls Who Code\Pictures\art\tears.png" width="750" height="825"
       />
       <br>
-      <img src="C:\Users\Girls Who Code\Pictures\art\drst 00.png" width="553" height="648">
+      <img
+      alt="A drawing of a Violinist."
+      src="C:\Users\Girls Who Code\Pictures\art\drst 00.png" width="553" height="648"
+      />
       <br>
       <img 
       alt="Drawing of Korekiyo Shinguji and Kirumi Tojo from DanganRonpa watching fireworks at the beach."
