--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <p>
         <img
         alt="Little monocolor self prtrait."
-        src="C:\Users\Girls Who Code\Pictures\art\icon.png"
+        src="icon.png"
         />
         </p>
         Hello! I am Mini, I am currently 15, gender non binary (they/them) and I enjoy drawing!
@@ -34,22 +34,22 @@
       <p>
       <img 
       alt="Drawing of Chihiro Fujisaki from DanganRonpa."
-      src="C:\Users\Girls Who Code\Pictures\art\tears.png" width="750" height="825"
+      src="tears.png" width="750" height="825"
       />
       <br>
       <img
       alt="A drawing of a Violinist."
-      src="C:\Users\Girls Who Code\Pictures\art\drst 00.png" width="553" height="648"
+      src="drst 00.png" width="553" height="648"
       />
       <br>
       <img 
       alt="Drawing of Korekiyo Shinguji and Kirumi Tojo from DanganRonpa watching fireworks at the beach."
-      src="C:\Users\Girls Who Code\Pictures\art\dr rarepair week d1.png" width="650" height="800"
+      src="dr rarepair week d1.png" width="650" height="800"
       />
       <br>
-      <img src="C:\Users\Girls Who Code\Pictures\art\C1.png">
-      <img src="C:\Users\Girls Who Code\Pictures\art\C1.png">
-      <img src="C:\Users\Girls Who Code\Pictures\art\C1.png">
+      <img src="C1.png">
+      <img src="C1.png">
+      <img src="C1.png">
     </p>
     </div>
     <div>
@@ -57,28 +57,28 @@
       <p>
         <img 
         alt="Colored sketch of Lemon Cookie from Cookie Run."
-        src="C:\Users\Girls Who Code\Pictures\art\.png" width="650" height="700"
+        src=".png" width="650" height="700"
         />
       <br>
         <img 
         alt="Drawing of John Egbert from Homestuck."
-        src="C:\Users\Girls Who Code\Pictures\art\ecto biologist.png" width="500" height="700"
+        src="ecto biologist.png" width="500" height="700"
         />
       <br>
         <img 
         alt="Sketch of Korekiyo Shinguji and Kirumi Tojo from Danganronpa>
-        src="C:\Users\Girls Who Code\Pictures\art\dr rarepair week d2 sketch.png" width="680" height="920"
+        src="dr rarepair week d2 sketch.png" width="680" height="920"
         />
       <br>
-      <img src="C:\Users\Girls Who Code\Pictures\art\C1.png">
-      <img src="C:\Users\Girls Who Code\Pictures\art\C1.png">
-      <img src="C:\Users\Girls Who Code\Pictures\art\C1.png">
+      <img src="C1.png">
+      <img src="C1.png">
+      <img src="C1.png">
       </p>
     </div>
     <div>
-      <a href="https://aminoapps.com/c/danganronpa/page/user/g00pchii-semi-hiatus/n5Vm_eN8tofVQM2QxB2zdzGzYj7r2wjmMQP"><img alt="Amino Acount" src="C:\Users\Girls Who Code\Pictures\art\a icon.png" width="107" height="105"></a>
-      <a href="http://www.g00pchii.tumblr.com/"><img alt="Tumblr Acount"src="C:\Users\Girls Who Code\Pictures\art\t icon.png" width="107" height="105"></a>
-      <a href="https://www.deviantart.com/g00pchii"><img alt="DeviantArt Acount" src="C:\Users\Girls Who Code\Pictures\art\d icon.png" width="107" height="105"></a>
+      <a href="https://aminoapps.com/c/danganronpa/page/user/g00pchii-semi-hiatus/n5Vm_eN8tofVQM2QxB2zdzGzYj7r2wjmMQP"><img alt="Amino Acount" src="a icon.png" width="107" height="105"></a>
+      <a href="http://www.g00pchii.tumblr.com/"><img alt="Tumblr Acount"src="t icon.png" width="107" height="105"></a>
+      <a href="https://www.deviantart.com/g00pchii"><img alt="DeviantArt Acount" src="d icon.png" width="107" height="105"></a>
     </div>
   </body>
 </html>
