--- a/portfolio.html
+++ b/portfolio.html
@@ -64,7 +64,7 @@
         />
       <br>
         <img 
-        alt="Sketch of Korekiyo Shinguji and Kirumi Tojo from Danganronpa>
+        alt="Sketch of Korekiyo Shinguji and Kirumi Tojo from Danganronpa"
         src="dr rarepair week d2 sketch.png" width="680" height="920"
         />
       <br>
