--- a/portfolio.html
+++ b/portfolio.html
@@ -16,40 +16,40 @@
     <div>
     <h3>finished pieces</h3>
       <p>
-      <img src="C:\Users\Girls Who Code\Pictures\art\tears.png" width="750" height="825">
+      <img src="tears.png" width="750" height="825">
       <p>
-      <img src="C:\Users\Girls Who Code\Pictures\art\drst 00.png" width="553" height="648">
+      <img src="drst 00.png" width="553" height="648">
       </p>
       <p>
-      <img src="C:\Users\Girls Who Code\Pictures\art\dr rarepair week d1.png" width="650" height="800">
+      <img src="dr rarepair week d1.png" width="650" height="800">
       </p>
       <p>
-      <img src="C:\Users\Girls Who Code\Pictures\art\C1.png">
-      <img src="C:\Users\Girls Who Code\Pictures\art\C1.png">
-      <img src="C:\Users\Girls Who Code\Pictures\art\C1.png">
+      <img src="C1.png">
+      <img src="C1.png">
+      <img src="C1.png">
     </p>
     </div>
     <div>
     <h3>sketches/doodles</h3>
       <p>
-        <img src="C:\Users\Girls Who Code\Pictures\art\.png" width="650" height="700">
+        <img src=".png" width="650" height="700">
       </p>
       <p>
-        <img src="C:\Users\Girls Who Code\Pictures\art\ecto biologist.png" width="500" height="700">
+        <img src="ecto biologist.png" width="500" height="700">
       </p>
       <p>
-        <img src="C:\Users\Girls Who Code\Pictures\art\dr rarepair week d2 sketch.png" width="680" height="920">
+        <img src="dr rarepair week d2 sketch.png" width="680" height="920">
       </p>
       <p>
-      <img src="C:\Users\Girls Who Code\Pictures\art\C1.png">
-      <img src="C:\Users\Girls Who Code\Pictures\art\C1.png">
-      <img src="C:\Users\Girls Who Code\Pictures\art\C1.png">
+      <img src="C1.png">
+      <img src="C1.png">
+      <img src="C1.png">
       </p>
     </div>
     <div id="links">
-      <a href="https://aminoapps.com/c/danganronpa/page/user/g00pchii-semi-hiatus/n5Vm_eN8tofVQM2QxB2zdzGzYj7r2wjmMQP"><img src="C:\Users\Girls Who Code\Pictures\art\a icon.png" width="107" height="105"></a>
-      <a href="http://www.g00pchii.tumblr.com/"><img src="C:\Users\Girls Who Code\Pictures\art\t icon.png" width="107" height="105"></a>
-      <a href="https://www.deviantart.com/g00pchii"><img src="C:\Users\Girls Who Code\Pictures\art\d icon.png" width="107" height="105"></a>
+      <a href="https://aminoapps.com/c/danganronpa/page/user/g00pchii-semi-hiatus/n5Vm_eN8tofVQM2QxB2zdzGzYj7r2wjmMQP"><img src="a icon.png" width="107" height="105"></a>
+      <a href="http://www.g00pchii.tumblr.com/"><img src="t icon.png" width="107" height="105"></a>
+      <a href="https://www.deviantart.com/g00pchii"><img src="d icon.png" width="107" height="105"></a>
     </div>
   </body>
 </html>
