--- a/prices.html
+++ b/prices.html
@@ -63,9 +63,9 @@
   <p>-NSFW (I am a minor)</p>
 </div>
 <div id="links">
-  <a href="https://aminoapps.com/c/danganronpa/page/user/g00pchii-semi-hiatus/n5Vm_eN8tofVQM2QxB2zdzGzYj7r2wjmMQP"><img src="C:\Users\Girls Who Code\Pictures\art\a icon 1.png" width="107" height="105"></a>
-  <a href="http://www.g00pchii.tumblr.com/"><img src="C:\Users\Girls Who Code\Pictures\art\t icon 1.png" width="107" height="105"></a>
-  <a href="https://www.deviantart.com/g00pchii"><img src="C:\Users\Girls Who Code\Pictures\art\d icon 1.png" width="107" height="105"></a>
+  <a href="https://aminoapps.com/c/danganronpa/page/user/g00pchii-semi-hiatus/n5Vm_eN8tofVQM2QxB2zdzGzYj7r2wjmMQP"><img src="a icon 1.png" width="107" height="105"></a>
+  <a href="http://www.g00pchii.tumblr.com/"><img src="t icon 1.png" width="107" height="105"></a>
+  <a href="https://www.deviantart.com/g00pchii"><img src="d icon 1.png" width="107" height="105"></a>
 </div>
 </body>
 </html>
