--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   <div>
   <h4>Bio</h4>
   <p>
-    <img src="C:\Users\Girls Who Code\Pictures\art\icon.png">
+    <img src="icon.png">
   </p>
   Hello! I am Mini, I am currently 15, gender non binary (they/them) and I enjoy drawing!
   <br>
