--- a/prices.html
+++ b/prices.html
@@ -13,7 +13,7 @@
   </div>
   <div>
   <p>Here's my commission info! I'm sorry but I don't offer sketches and line art only.</p>
-  <p>Email me at mintra.mail@gmail.com or message me on one of my social media me if you're interested or have any questions!</p>
+  <p>Email me at shyguy.half@gmail.com or message me on one of my social media me if you're interested or have any questions!</p>
 
   <h4>Headshot:</h4>
   <p>Flats: 5$</p>
@@ -53,7 +53,7 @@
   <h4>Rules:</h4>
   <h4>What I will draw:</h4>
   <p>-Fan art</p>
-  <p>-OCs<<p>p>
+  <p>-OCs<p>
   <p>-Slight nudity</p>
   <p>-Gore</p>
   <p>-Ships</p>
